<resources>
    <string name="app_name">Eclectic bank</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_eclectics_agency_banking">Welcome to Eclectics Agency Banking</string>
    <string name="onboardingScreen2Text">Simplify banking through agents across Your region and spread your banking Footprint</string>
    <string name="skip">Skip</string>
    <string name="select_language">Select language</string>
    <string name="give_permissions_to_have_a_better_experience">Give permissions to have a better experience</string>
    <string name="contacts">Contacts</string>
    <string name="we_access_your_contacts_to_make_transactions">We access your contacts to make transactions</string>
    <string name="storage">Storage</string>
    <string name="make_downloads_of_your_statements">Make downloads of your statements</string>
    <string name="location">Location</string>
    <string name="to_give_you_available_service_via_maps">To give you available service via maps</string>
    <string name="give_all_permission">GIVE ALL PERMISSION</string>
    <string name="you_are_all_set_to_go_set_up_and_activate_your_agency_banking_account">You are all set to go set up and activate Your Agency banking account</string>
    <string name="back">Back</string>
    <string name="get_started">Get Started</string>
    <string name="cash_deposit">Cash deposit</string>
    <string name="deposit_money_on_behalf_of_your_customers_to_their_accounts">Deposit money on behalf of your customers to their accounts</string>
    <string name="select_bank">Select Bank</string>
    <string name="account_number">Account number</string>
    <string name="customer_phone_number">Customer Phone Number</string>
    <string name="amount">Amount</string>
    <string name="narration">Narration</string>
    <string name="make_deposit">MAKE DEPOSIT</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm_transaction">Confirm transaction</string>
    <string name="account_name">ACCOUNT NAME</string>
    <string name="account_number_uppercase">ACCOUNT NUMBER</string>
    <string name="amount_uppercase">AMOUNT</string>
    <string name="charge">CHARGE</string>
    <string name="narration_uppercase">NARRATION</string>
    <string name="ref_no">REF NO:</string>
    <string name="view_summary">View Summary</string>
    <string name="last_logged">Last Logged:</string>
    <string name="agent_id_123456">Agent ID: 123456</string>
    <string name="welcome_back_alex">Welcome back Alex,</string>
    <string name="here_s_your_quick_access_to_agency_banking_services">Here’s your quick access to agency banking services</string>
    <string name="excise_duty">EXCISE DUTY</string>
    <string name="required">Required</string>
    <string name="mobile_money_withdrawal">Mobile Money Withdrawal</string>
    <string name="submit">SUBMIT</string>
    <string name="select_network_provider">Select network provider</string>
    <string name="initiate_a_mobile_money_withdrawal_for_your_customer">Initiate a mobile money withdrawal for your Customer</string>
    <string name="cardless_withdrawal">Cardless withdrawal</string>
    <string name="intiators_phone_number">Intiators phone number</string>
    <string name="card_less_withdrawal">Card-less withdrawal</string>
    <string name="eg_254712345678">Eg. +254712345678</string>
    <string name="recipient_s_phone_number">Recipient\'s Phone number</string>
    <string name="customer_s_pin">Customer\'s Pin</string>
    <string name="search">Search</string>
    <string name="school_fees">School fees</string>
    <string name="institution">Institution</string>
    <string name="search_by_name">Search by name</string>
    <string name="student_s_name">Student\'s Name</string>
    <string name="student_s_admission_number">Student\'s Admission Number</string>
    <string name="pay_school_fees_to_this_school">Pay school fees to this school</string>
    <string name="next_arrow">next arrow</string>
    <string name="eclectics_logo">Eclectics logo</string>
    <string name="profile">Profile</string>
    <string name="withdraw_money_from_customers_account_without_using_a_card">Withdraw money from customers account without Using a card</string>
    <string name="_020001254712345678">020001254712345678</string>
    <string name="_123456">123456</string>

    <string-array name="languages">
        <item>English</item>
        <item>French</item>
        <item>Spanish</item>
        <item>Swahili</item>
    </string-array>


    <string-array name="banks">
        <item>Absa</item>
        <item>Stanbic</item>
        <item>Standard Chartered</item>
        <item>Equity</item>
    </string-array>
</resources>