<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.dashboardScreens.HomeDashboardFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_arrow" />


    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">


        <!--Cash deposit Text-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/cash_deposit"
            android:textColor="@color/blue"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Cash deposit sub text-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/deposit_money_on_behalf_of_your_customers_to_their_accounts"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Select bank input field-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/select_bank">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextview"
                style="@style/inputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Account number input field-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/accountNumberContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/account_number"
            android:maxLength="12"
            app:helperText=""
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/accountNumberTextField"
                style="@style/inputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/_020001254712345678"
                android:textColorHint="@color/white"
                android:maxLength="12" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Customer phone number input field-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumberContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/customer_phone_number"
            app:helperText=""
            app:helperTextTextColor="@color/red"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNumberTextField"
                style="@style/inputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/eg_254712345678"
                android:textColorHint="@color/white"
                android:maxLength="15" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Amount input field-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amountContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/amount"
            android:maxLength="8"
            app:helperText=""
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amountTextField"
                style="@style/inputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Narration input field-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/narrationContainer"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_marginTop="16dp"
            android:hint="@string/narration"
            app:helperText=""
            app:helperTextTextColor="@color/red"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/narrationtextField"
                style="@style/inputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>



    <!-- Make deposit button-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/makeDepositButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:text="@string/make_deposit"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>