<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.additionalScreens.SchoolFeesPaymentFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_arrow" />


    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:orientation="vertical"
        android:layout_margin="16dp">


        <!--School name-->
        <TextView
            android:id="@+id/schoolTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_bold"
            android:textColor="@color/blue"
            android:textSize="22sp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--School fees sub text-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/pay_school_fees_to_this_school"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Student name input field-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/studentNameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_s_name"
            android:layout_marginTop="16dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/studentTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                style="@style/inputLayoutStyle"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Student Admission number input field-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addmissionNumberContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_s_admission_number"
            android:layout_marginTop="16dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/admissionNumberTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                style="@style/inputLayoutStyle"
                android:hint="@string/_123456"
                android:textColorHint="@color/white"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Customer phone number input field-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumberContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_phone_number"
            android:layout_marginTop="16dp"
            app:helperText=""
            app:helperTextTextColor="@color/red"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNumberTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="10"
                style="@style/inputLayoutStyle"
                android:hint="@string/eg_254712345678"
                android:textColorHint="@color/white"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Amount input field-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amountContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:layout_marginTop="16dp"
            app:helperText=""
            app:helperTextTextColor="@color/red"
            android:maxLength="8"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amountTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                style="@style/inputLayoutStyle"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Narration input field-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/narrationContainer"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:hint="@string/narration"
            android:layout_marginTop="16dp"
            app:helperText=""
            app:helperTextTextColor="@color/red"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/narrationtextField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                style="@style/inputLayoutStyle"
                />

        </com.google.android.material.textfield.TextInputLayout>




    </LinearLayout>



    <!-- Make deposit button-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/makeDepositButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:fontFamily="@font/nunito_sans_extrabold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>