<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.onboardingScreens.OnBoardingScreen1">

    <!--Company Logo-->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/eclectics_logo"
        android:src="@drawable/eclecticslogo"
        android:paddingTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Lottie animation -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="16dp"

        app:lottie_rawRes="@raw/toggleanimation" />


    <!--Text-->
    <TextView
        android:id="@+id/onboardingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/give_permissions_to_have_a_better_experience"
        android:textColor="@color/blue"
        android:textSize="14sp"
        android:fontFamily="@font/nunito_sans_bold"
        android:layout_marginHorizontal="30dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animation_view" />

    <!--Permission list-->
    <LinearLayout
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="8dp"
        android:id="@+id/permissionColmun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboardingText"
        android:orientation="vertical">

        <!--Contacts Permission-->
        <LinearLayout
            android:background="@color/background_grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contacts"
                android:src="@drawable/contact"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:text="@string/contacts"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/we_access_your_contacts_to_make_transactions"
                    android:fontFamily="@font/nunito_sans"
                    android:textColor="@color/light_black"
                    android:textSize="12sp"/>


            </LinearLayout>


        </LinearLayout>

        <!--Storage Permission-->
        <LinearLayout
            android:padding="8dp"
            android:background="@color/background_grey"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/storage"
                android:src="@drawable/storage"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:text="@string/storage"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans"
                    android:text="@string/make_downloads_of_your_statements"
                    android:textColor="@color/light_black"
                    android:textSize="12sp"/>


            </LinearLayout>


        </LinearLayout>

        <!--Location Permission-->
        <LinearLayout
            android:padding="8dp"
            android:background="@color/background_grey"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/location"
                android:src="@drawable/location"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:textSize="12sp"
                    android:text="@string/location" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans"
                    android:text="@string/to_give_you_available_service_via_maps"
                    android:textColor="@color/light_black"
                    android:textSize="12sp"/>


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


<!--Request permission button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/givePermissionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/give_all_permission"
        android:layout_marginTop="22dp"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:fontFamily="@font/nunito_sans_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permissionColmun" />


<!--   dash divider     -->
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="15dp"
        android:layout_height="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:dividerColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/givePermissionButton" />



    <!--Skip and next buttons-->

    <TextView
        android:id="@+id/skiptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null"
        android:text="@string/skip"
        android:textAlignment="center"
        android:textSize="16sp"
        android:fontFamily="@font/nunito_sans_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="35dp"/>


    <ImageView
        android:id="@id/nextArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/next_arrow"
        android:src="@drawable/forward_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="35dp"/>





</androidx.constraintlayout.widget.ConstraintLayout>